bob_test/tests/enum_not_supported.rs
// #[macro_use]
// extern crate bob;
//
// #[derive(Builder)]//~ ERROR Only structs supported.
// enum Enum {}
